# Dev-Senior

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml  deploy.yml  docker.yml
agents/: config.py  ports.py  registry.py
agents/adapters/: biz_manager_agent.py  dev_senior_agent.py
agents/biz_manager/: __main__.py  agent.py  prompts.py
agents/dev_senior/: __main__.py  agent.py  prompts.py
api/: auth.py  db.py  file_extractor.py  main.py  metrics_store.py  sessions.py
api/routes/: biz_manager.py  dev_senior.py  metrics.py  slack.py  teams.py
docs/: deploy_railway_vercel.md  guide_biz_manager.md  guide_dev_senior.md  runbook_prod.md
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  metrics.ts
frontend/src/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  MetricsDashboard.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
infra/deploy/: com.agents.api.plist  com.agents.eval.plist  healthcheck.sh  init.sql  install_eval_cron.sh  install_launchd.sh  start.sh  start_api.sh  stop.sh
infra/docker/: .dockerignore  Dockerfile  docker-compose.yml  pull-models.sh
mcp_servers/common/: google_auth.py
mcp_servers/crm/: server.py
mcp_servers/github/: server.py
mcp_servers/google_workspace/: server.py
mcp_servers/seo/: server.py
memory/: embeddings.py  ports.py  store.py
memory/adapters/: qdrant_store.py
memory/biz_manager/: context.py
memory/dev_senior/: indexer.py  retriever.py
memory/shared/: memory.py
observability/: langfuse_config.py  logfire_config.py
observability/evals/: cron_eval.py  eval_drift.py  eval_quality.py
tests/: conftest.py
tests/agents/: test_registry.py  test_smoke.py
tests/api/: test_biz_manager_task.py  test_sessions.py  test_slack.py  test_streaming.py  test_teams.py  test_upload.py
tests/mcp_servers/: test_crm.py  test_dataforseo_client.py  test_github.py  test_github_client.py  test_google_auth.py  test_google_workspace.py  test_hubspot_client.py  test_search_console_client.py  test_seo.py  test_workspace_client.py
tests/memory/: test_context.py  test_indexer.py  test_qdrant_store.py  test_retriever.py  test_shared.py
tests/observability/: test_cron_eval.py
workflows/n8n/: 01_pr_review_bot.json  02_weekly_seo_report.json  03_email_triage.json  04_new_lead_onboarding.json  05_content_calendar.json  README.md
(+5 files in other folders)
