[project]
name = "dev-senior-agents"
version = "0.1.0"
description = "Agents IA internes — Dev Senior & Business Manager"
requires-python = ">=3.11"

dependencies = [
    "pydantic-ai[logfire]>=0.0.14",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",          # affichage terminal soigné
    "typer>=0.12.0",         # CLI pour lancer les agents
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.scripts]
dev-senior = "agents.dev_senior.__main__:app"
biz-manager = "agents.biz_manager.__main__:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
