[project]
name = "dev-senior-agents"
version = "0.1.0"
description = "Agents IA internes — Dev Senior & Business Manager"
requires-python = ">=3.11"

dependencies = [
    # Agents
    "pydantic-ai>=0.0.14",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    # MCP
    "mcp>=1.0.0",
    # GitHub
    "PyGithub>=2.3.0",
    # Google Workspace
    "google-api-python-client>=2.130.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # Mémoire vectorielle
    "qdrant-client>=1.9.0",
    # Sessions persistantes
    "asyncpg>=0.29.0",
    "redis[asyncio]>=5.0.0",
    # Observabilité
    "langfuse>=2.0.0,<3.0.0",
    # API HTTP (pour n8n + frontend statique)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=23.0.0",
    # Upload de fichiers
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
dev-senior = "agents.dev_senior.__main__:app"
biz-manager = "agents.biz_manager.__main__:app"

[tool.setuptools.packages.find]
include = ["agents*", "api*", "memory*", "mcp_servers*", "observability*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
